# transllm

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  OPENAI_FEATURE_GAP_ANALYSIS.md  OPENAI_NEW_FEATURES_GUIDE.md  PHASE_1_1_OPENAI_ENHANCEMENT_SUMMARY.md  PHASE_1_1_SUMMARY.md  PROJECT_STATUS.md  README.md  demo.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
src/platform/: app.py  streaming.py
src/transllm/: __init__.py
src/transllm/adapters/: __init__.py  anthropic.py  openai.py
src/transllm/adapters/gemini/: __init__.py  adapter.py  response_handler.py  schema_converter.py  transformation.py  utils.py
src/transllm/converters/: __init__.py  request_converter.py  response_converter.py
src/transllm/core/: __init__.py  base_adapter.py  exceptions.py
src/transllm/fixtures/: __init__.py
src/transllm/fixtures/anthropic/: __init__.py
src/transllm/fixtures/gemini/: __init__.py
src/transllm/fixtures/openai/: __init__.py
src/transllm/ir/: __init__.py  aliases.py  openapi.yaml  schema.py
src/transllm/types/: __init__.py  provider.py
src/transllm/utils/: __init__.py  capability_matrix.py  provider_registry.py
tests/: test_cross_format_conversion.py  test_idempotency_anthropic.py  test_idempotency_anthropic_extended.py  test_idempotency_gemini.py  test_idempotency_openai.py  test_idempotency_openai_extended.py  test_openai_new_features.py  test_streaming_anthropic.py
